[gd_scene load_steps=16 format=3 uid="uid://ik0ei1igpo08"]

[ext_resource type="Script" path="res://scenes/micro_games/mole_turf/mole_turf.gd" id="1_dvcqh"]
[ext_resource type="PackedScene" uid="uid://bboiug5hrsif0" path="res://scenes/micro_games/mole_turf/assets/mole_hole.tscn" id="3_eqoqx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_022j6"]
albedo_color = Color(0.247059, 0.607843, 0.0431373, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_qvlsy"]
material = SubResource("StandardMaterial3D_022j6")
top_radius = 2.5
bottom_radius = 2.0
height = 0.5
radial_segments = 19
cap_bottom = false

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_27lgm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_itlk3"]
shading_mode = 2
albedo_color = Color(0.247059, 0.607843, 0.0431373, 1)

[sub_resource type="BoxMesh" id="BoxMesh_iofhs"]
material = SubResource("StandardMaterial3D_itlk3")
size = Vector3(0.01, 0.05, 0.005)

[sub_resource type="MultiMesh" id="MultiMesh_jxrla"]
transform_format = 1
instance_count = 200
mesh = SubResource("BoxMesh_iofhs")
buffer = PackedFloat32Array(-1.3604, 0.714697, -0.304787, 1.73425, -0.742901, -1.01649, 0.932317, -0.051629, 0.227565, 0.95411, 1.22158, 1.68177, 0.566853, -1.47176, -0.619661, -2.07997, -0.921558, -0.838496, 1.1485, -0.36103, -1.30415, -0.0471962, -1.08091, -0.380735, 0.211374, -0.255925, -0.963261, -2.12886, 0.256603, 0.965465, -0.200202, 0, 0.963081, -0.201068, 0.264756, -0.641019, -1.56666, -0.903482, 0.423381, -1.66355, 0.993051, -1.48844, 0.498362, -0.491679, 0.096864, 0.64671, 1.73849, 1.1177, 0.97838, 0.554801, 0.742107, -0.0143004, -0.360523, 1.22214, -0.438364, 0, -0.853551, 0.119733, 1.03579, -2.43231, 1.52521, 0.19679, 0.214154, -1.46136, -0.19303, 1.54012, -0.0404784, 0, -0.21755, 0.0131385, 1.53732, 0.00817093, 0.185958, -0.105672, -1.2031, -1.2027, 0.213334, 1.20101, -0.0725139, 0, 1.18874, -0.199006, 0.201218, -1.89463, -0.0898285, -0.681363, 1.3875, -1.31052, -0.678252, -1.23153, -0.648682, -0.124647, 1.38902, -0.645413, -0.227017, -1.94898, -1.04352, -0.159098, -0.515955, 2.14243, -0.199485, 1.15692, 0.0467129, 0, 0.501724, 0.12909, -1.05454, 1.14516, -0.558642, -0.942167, -0.816327, -2.25094, -0.235656, -0.798604, 1.08298, -0.236055, -1.22415, 0.583696, 0.164052, -0.123598, -0.916359, -0.365153, -0.668499, -0.884093, -0.128637, 1.10494, -0.427215, 0, 0.750787, -0.256365, -0.889122, -1.39007, 1.72164, 0.199712, 0.0120052, -0.34091, -0.179073, 1.58454, -0.67913, 0, -0.0892285, 0.67335, 1.59459, -0.604507, -0.703458, -0.517939, -1.26869, -1.80164, -0.108364, 1.44265, -0.528872, 0, 1.36605, -0.152276, -0.695276, -1.63901, 1.27113, -0.0920764, 0.325932, 1.35531, -0.0376168, 1.21972, 0.491277, 0, -0.336593, -0.484035, 1.17597, 0.551452, 0.91936, -1.22282, -0.80837, -2.42692, 0.128898, -0.883069, 1.48241, -0.0124571, -1.46018, -0.847864, -0.378106, -0.411328, 0.0923471, 0.799579, 0.691983, 2.32968, -0.416071, -0.611111, 0.761658, -0.103663, 0.972137, -0.337508, 0.260252, 0.508186, -0.729604, 0.691311, 0.392741, 2.15437, -0.545378, -0.823016, 0.435529, -0.281568, 0.578549, 0.0959787, 0.905841, -0.406337, -1.49133, -0.438066, -0.150459, 0.0995659, 0.40008, -0.962681, -1.16267, -0.147445, 0.233402, -1.14889, 1.03159, -2.32047, -0.0258627, -0.486785, -1.08709, -1.75731, 0.343017, -1.04433, 0.459475, -0.370154, -1.14064, -0.303015, 0.162823, -1.15117, 1.80757, -0.268158, 0.127473, 0.533973, 0.24583, 1.79267, 0.285268, 0, -0.166511, -0.264388, 1.80495, 0.0718899, -1.48272, 0.333516, -1.08694, -1.52987, 0.700473, 1.67495, -0.441591, 0, 0.895548, -0.757913, -1.4542, 0.0245603, -1.6126, -0.134395, 0.462538, 1.2541, -0.293391, 1.55581, -0.570826, 0, -0.382002, -0.627582, -1.51416, 0.744444, 0.563401, -0.152049, 1.81104, 0.725799, 0.13119, 1.89452, 0.118246, 0, -1.81267, 0.0898547, 0.571452, 2.06103, -0.781166, -0.0888025, 1.02463, -0.239638, -0.00702232, 1.28711, 0.106197, 0, -1.02845, 0.0586622, -0.778992, -0.727027, -0.345581, -0.108802, 1.53985, -0.760955, -0.0205563, 1.57815, 0.106894, 0, -1.54355, 0.0033422, -0.346176, -1.2566, -0.791602, 0.0426501, -1.35595, -0.506757, -0.247678, 1.53898, 0.193002, 0, 1.33381, 0.311087, -0.768897, -1.27422, -0.611232, -0.197441, 1.02193, 0.797211, -0.0654363, 1.19006, 0.190787, 0, -1.03877, 0.0412117, -0.613342, -0.711796, -1.20241, -0.293458, -0.900982, -1.48933, -0.301206, 1.49851, -0.0861041, 0, 0.898422, 0.10964, -1.2347, -1.70426, 1.91718, -0.206866, 0.442912, 1.17813, 0.271344, 1.94145, -0.267763, 0, -0.406617, 0.320205, 1.90963, 1.81355, 0.85308, 0.824834, 0.463092, 2.10068, 0.664263, -0.966329, 0.497508, -0.272969, 0.673469, -0.0916944, -1.0773, -0.652845, 1.88857, 0.628823, 0.141266, 0.0268899, 0.497329, -1.14369, -1.55779, -0.245888, -0.409925, 1.50951, -1.23911, 2.24963, 0.894467, -1.17954, 1.05422, -1.50665, -0.283864, -1.31107, -1.22608, -0.0909722, 1.55631, 0.438789, -0.829527, 1.8717, 0.22779, -0.346416, 1.39617, -0.822396, -1.14789, -0.895727, -0.0349653, -0.106088, 0.866983, -1.09492, -0.413122, -2.21419, -1.30504, -0.23262, -1.15547, -1.65033, 0.617089, -1.60361, -0.374128, -0.0910194, -1.0042, -0.683125, 1.27171, -1.72652, 1.7158, 0.574355, 0.47763, 0.86903, -0.0939394, -1.02114, 1.56539, -0.310176, 0.741073, -1.45924, -0.907422, -1.98533, 1.72837, 0.372537, -0.275702, -1.39128, -0.260702, 1.6616, 0.610875, 0, 0.383184, -0.549864, 1.65918, 0.369, 0.126471, 0.456726, -1.03082, 0.450473, -0.0121645, 1.03778, 0.458316, 0, 1.1274, -0.0400377, 0.120581, -0.9347, -0.225061, 0.429253, -1.53604, 0.0992153, 0.597642, -1.41553, -0.483142, -0.378356, -1.47868, -0.637452, 0.038518, -2.09274, -0.177447, 0.933732, 0.773424, 1.70092, 0.339964, -0.711989, 0.937562, -0.392168, 1.16381, 0.350347, -0.155949, 1.22201, 0.330454, 1.02259, -0.481252, 1.95951, -0.33209, -0.391411, -1.05972, -0.484093, -1.08029, 0.433129, 0.178556, 0.430989, -0.464793, -0.72101, 1.29033, -1.78097, 0.125901, -1.36702, -0.71851, -0.336213, 1.47274, -0.110686, 0.468649, -1.17615, -0.956323, -0.624972, -0.300275, -2.21278, 0.692457, -0.887038, -0.359132, -0.0685017, -0.0354783, -0.466778, 1.08451, -0.998059, -0.452645, 1.60595, -0.628245, 2.42687, -1.3214, -0.740344, -0.940444, -0.0304588, -1.108, 0.226868, 1.37823, -0.339137, 1.5342, -1.02703, 0.226786, -1.21946, -1.0465, -1.5307, 0.147627, -0.310745, 0.105113, -0.249352, -1.84032, -1.78723, -1.75363, 0.45967, -0.722791, 0.121045, -0.0303128, -1.6791, -0.994304, -0.238801, -0.85604, -0.882192, 1.51587, -2.23034, 0.593462, -0.514709, 0.943011, -2.37105, -0.043548, -1.08796, -0.56642, -0.104498, 1.07345, 0.240422, -0.544326, -0.00133761, -0.693698, 0.810998, -1.0251, 0.94885, 0.727236, -0.724848, -1.06559, -0.0281602, -1.08613, -1.00331, -0.0587664, -2.25206, -0.0585863, -0.34978, 1.30379, 0.527064, 0.482935, 1.21321, 0.347181, 0, -1.26055, 0.481056, 0.0724143, 1.81379, -1.83373, -0.0908203, 0.563846, -0.606196, 0.00738351, 1.89224, 0.3288, 0, -0.571066, 0.316095, -1.80629, -1.99159, -1.5032, -0.259151, 0.760732, 0.567535, -0.458853, 1.60141, -0.361155, 0, -0.659792, -0.523278, -1.482, -0.528088, -1.4778, 0.252099, 0.905191, -0.50314, 0.63571, 1.51057, 0.617153, 0, -0.691952, 0.849383, -1.36623, -0.303247, -0.521424, -0.286792, -1.1329, 1.15277, 0.290031, 1.16998, -0.429669, 0, 1.13207, -0.431838, -0.411725, 1.08248, 0.920426, 0.524372, 0.544901, 0.166266, -0.280945, 1.03403, -0.520507, 0, -0.702106, 0.273664, 0.922617, -1.14068, 1.1489, 0.340502, -0.194567, 0.244478, -0.263889, 1.11677, 0.39617, 0, 0.290105, -0.332635, 1.13091, 0.833987, 0.148187, 0.998348, -0.381623, 2.29055, 0.19495, -0.404058, -0.981339, -0.0328177, -1.05087, 0.0658228, -0.235865, 0.836229, -0.615871, 1.04576, -0.523262, 2.02537, -1.1674, -0.515567, 0.343631, -0.402906, 0.0677784, 0.622327, 1.16397, 0.531925, -0.454794, 0.287365, -1.20007, 1.62663, 0.427569, 1.23644, 0.134038, 0, 1.15755, -0.343807, -0.521008, 0.754882, 1.18302, 0.529347, -0.290605, 1.62926, 0.0682858, -0.752359, -1.09247, -0.155723, -0.599998, 0.958089, -0.697321, 1.64425, 1.08654, 0.630048, 0.685068, 1.38829, -0.542986, 1.28437, -0.320022, 0, -0.755939, -0.016962, 1.21454, 1.19641, 1.46349, -0.546918, 0.897702, -1.58779, 0.198523, 1.6549, 0.684593, 0, -1.03227, -0.457121, 1.40437, -1.45876, -0.0476992, 0.569746, -1.32996, 1.5999, 0.0340069, 1.33075, 0.568868, 0, 1.44646, -0.0124985, -0.0572318, 1.51003, -0.0731352, -0.272272, -1.00782, -0.540874, 0.870324, -0.573829, 0.0918675, -0.287512, -0.576515, -0.831729, 0.266535, -2.12165, -0.918278, -0.793725, -1.36586, -1.38974, 1.547, -0.771749, -0.591588, -0.00370671, -0.319903, -1.45368, 1.05984, -2.03851, -1.83476, 0.315901, 0.184722, -1.76345, 0.25436, 1.77985, -0.51737, 0, -0.263091, -0.482262, -1.78842, -0.972271, 1.1097, -0.497554, -1.46909, 1.41531, 0.369528, 1.83915, -0.34376, 0, 1.5064, -0.0846286, 1.16654, 0.854882, -0.263877, -0.612019, -1.77616, -2.27111, -0.467672, 1.75853, -0.536464, 0, 1.8195, 0.363241, -0.39548, -0.33327, -0.852514, 0.580485, 0.339755, 1.6021, -0.668811, -0.789775, -0.328821, -0.0353253, 0.0713273, -0.467407, 0.977558, -1.83369, -0.162427, 0.111613, 1.62165, -1.11474, -0.316189, 1.59643, -0.141547, 0, -1.59444, -0.327954, -0.137129, -0.501818, -0.861974, 0.0192153, 1.45035, 2.28307, -0.0740721, 1.68434, -0.0663381, 0, -1.44858, -0.0975613, -0.859632, -0.0969698, 0.0544882, 0.430359, -1.41235, 0.438263, 0.164442, 1.40275, 0.433778, 0, 1.46728, -0.173192, 0.00383356, 1.93257, 1.0114, 0.0539067, -0.949389, -1.9309, -0.144897, 1.37855, -0.0760869, 0, 0.939814, 0.154526, 1.00998, 0.100256, 1.57274, -0.028955, -0.108941, -1.10232, 0.0574118, 1.51717, 0.42559, 0, 0.0970077, -0.428467, 1.51434, -0.131734, -1.64225, -0.0589096, 0.294231, 1.86511, 0.0720171, 1.51173, 0.704637, 0, -0.2913, 0.705854, -1.48457, -0.808685, 0.909067, 0.135542, 1.75605, -1.6152, -0.61761, 1.87521, 0.174984, 0, -1.64943, -0.627447, 0.902306, -0.459182, 1.02117, 0.841181, 1.10218, 2.164, 0.204304, -1.4452, 0.913686, -0.0671656, 1.37137, -0.411068, -0.956841, -1.07515, 0.0904104, 0.289662, -1.06994, 1.54489, 0.374723, 1.00231, 0.303015, 0, 1.0432, -0.385139, -0.0161165, -0.566981, -0.714002, 0.584003, -0.962944, 0.254399, -0.838146, -1.0371, -0.00750932, -0.0950656, -0.752218, 0.601237, 0.922389, 2.36249, 0.362387, -0.217178, -1.46511, -0.428478, 0.404961, 1.46538, -0.117053, 0, 1.42468, -0.361287, 0.405943, 2.37071, 1.58405, 0.0823011, -0.433015, -1.80779, 0.0824516, 1.53147, 0.592705, 0, 0.432986, -0.592726, 1.47129, 0.764096, -1.84566, -0.338246, 0.575316, 0.936091, -0.157261, 1.86465, 0.591781, 0, -0.648589, 0.510417, -1.78064, -1.36191, 0.092853, -0.304167, 1.24043, -2.47362, 0.364417, 1.19831, 0.26656, 0, -1.22408, 0.333671, 0.17345, -0.209656, 0.93319, -0.307518, -0.674622, -0.239003, -0.692729, -0.748136, -0.617208, -0.245438, -0.264215, 0.875358, -0.764503, 2.21468, -0.766858, -0.149135, 1.83118, 2.14162, 0.485906, 1.89717, 0.357997, 0, -1.77182, 0.584829, -0.694371, -0.722959, 1.07112, -0.421266, 0.243545, 2.41208, 0.361054, 1.08281, 0.285031, 0, -0.326219, -0.184765, 1.11513, 0.42701, -1.15921, 0.92003, 0.59417, 1.47822, 0.0139772, -0.852683, 1.34759, -0.125491, 1.09512, 0.984748, 0.611739, 1.85232, 0.524036, 0.345424, -1.03683, 0.288924, -0.324365, 1.14721, 0.218258, 0, 1.04361, 0.183115, 0.588468, 2.15461, -0.742605, -0.246673, -1.15034, 1.48663, -0.0735937, 1.36741, -0.245711, 0, 1.17419, -0.0703021, -0.742924, -1.08045, -1.05172, -0.497332, -0.483419, -2.15848, -0.389392, 1.15005, -0.335998, 0, 0.57394, -0.131079, -1.1138, -0.0583927, 1.05458, 0.403585, 0.0641871, 0.959155, 0.374277, -0.882547, -0.600134, -0.123988, -0.164067, 0.58083, -0.956479, 2.14573, 0.65919, 0.3801, -1.50538, -0.362032, -0.518687, 1.59539, 0.175698, 0, 1.46342, 0.394247, 0.740363, -0.480158, -0.378524, -0.101838, 1.1662, -1.75061, -0.47861, 1.132, -0.056495, 0, -1.06833, -0.47105, -0.387891, 0.481861, 1.52848, -0.0554349, -0.434919, 1.27645, 0.0028709, 1.57859, -0.191119, 0, 0.438428, 0.182925, 1.5175, -0.612278, -0.343491, -0.35357, -0.943209, -1.55723, -0.323368, 0.9825, -0.250536, 0, 0.953985, 0.205727, -0.424534, 1.24632, 1.36901, -0.0262381, 0.402235, 0.940281, 0.0990245, 1.40235, -0.245555, 0, -0.390738, 0.263467, 1.34707, 0.24442, 1.20748, -0.377012, 0.193601, 0.97429, 0.311055, 1.1854, 0.368374, 0, -0.287862, -0.300527, 1.21014, -0.0592459, 1.1423, -0.0173239, 0.114706, -0.608882, -0.0809786, -0.93201, 0.665668, -0.0443023, 0.0830667, -0.670352, -0.928463, -2.35195, 1.23258, -0.161909, -0.777447, 0.108872, 0.0949663, 1.45521, -0.152495, 0, 0.788429, 0.0778388, 1.23378, -1.47331, -0.745381, 0.961785, -0.00921839, 1.92033, -0.757116, -0.593902, -0.744825, -0.164581, -0.593204, -0.450509, 0.962216, -1.2724, 1.24817, 0.55931, -0.367943, 0.696257, -0.533017, 1.30123, 0.169843, 0, 0.405096, -0.0112071, 1.35717, 1.92549, 0.7004, 0.279176, 1.00603, 0.905852, -0.422877, 1.18347, -0.0340089, 0, -0.954571, -0.319441, 0.753221, 1.67233, 0.117544, -0.258332, -1.3042, 1.33067, 0.34091, 1.27137, -0.221104, 0, 1.28508, -0.313641, 0.177947, 0.455534, 1.68368, -0.338919, -0.568792, 1.47146, 0.115653, 1.68085, -0.659203, 0, 0.651931, 0.577112, 1.58591, -0.388719, 1.5044, -0.419621, 0.147645, -0.622744, 0.44464, 1.43404, -0.454902, 0, -0.0132854, 0.478078, 1.49411, 0.802724, -0.746906, 0.400575, -1.30246, -1.46439, -0.105815, 1.46374, 0.510861, 0, 1.35855, 0.334238, -0.676277, -0.299746, -0.0337629, -1.33699, -0.558595, -2.10665, -0.557412, -0.503765, 1.23945, -0.25966, -1.33749, 0.2437, -0.502452, 0.698502, 1.22171, -0.0240106, -0.155601, 0.252635, -0.0205582, 1.18265, -0.343907, 0, 0.156094, 0.343683, 1.17255, 0.801746, -0.531986, -1.26555, -1.37624, -1.09503, 1.49965, -1.14333, 0.471686, -0.430037, -1.11655, -0.932642, 1.28924, -1.73498, -1.16871, -0.196429, 0.87198, 0.698759, -0.40259, 1.3972, -0.224843, 0, -0.798032, -0.417191, -1.16357, 0.234272, -0.960474, 0.471172, -0.518392, 1.2228, 0.527802, 1.06516, -0.00977013, 0, 0.460607, -0.238049, -1.06977, 0.658513, 1.03776, -0.0438206, -1.37563, 2.01775, 0.292981, 1.6904, 0.167174, 0, 1.34479, -0.334462, 1.02515, -1.06333, -1.31677, 0.483142, 1.04018, -1.29742, 0.0181837, 1.59231, -0.716578, 0, -1.14676, -0.529518, -1.20574, 0.0170988, 1.11522, 0.119752, -1.16853, -1.80883, -0.266603, 1.59504, -0.0909806, 0, 1.14399, 0.254979, 1.11794, 0.945238, -1.15205, 0.167232, 0.0172743, 0.554487, 0.165461, 1.14902, -0.0887037, 0, -0.0297896, -0.085319, -1.16074, -0.0660129, -1.51459, 0.0428258, 0.265472, -0.16663, 0.0368411, 1.53737, -0.0378195, 0, -0.266368, -0.0308792, -1.51473, -2.27862, 1.44712, -0.178798, -0.491726, 2.12751, -0.0455118, 1.39767, -0.642151, 0, 0.521241, 0.618434, 1.30911, -0.0760488, -1.80691, -0.171422, -0.0718221, -1.24023, -0.185832, 1.67856, 0.66886, 0, 0.00324835, 0.672698, -1.68729, -0.523853, -0.416005, -0.21762, 1.6581, 0.398427, 0.105073, 1.70185, 0.249724, 0, -1.66901, 0.161382, -0.397563, -1.17434, -1.31505, 0.827515, -0.824238, 1.17282, -1.12377, -1.23467, 0.553368, -0.120205, -0.318246, 0.940375, 1.45186, 2.03431, 0.695499, -0.309876, -1.40203, -1.41846, 0.642667, -1.32591, 0.611858, -0.458001, -1.28401, -0.831485, -0.453181, -1.44829, -0.485619, -0.236145, -1.33374, -0.0903453, -0.028324, 1.41833, -0.240809, 0, 1.35419, -0.0550173, -0.483323, 0.579698, 1.20217, -0.730903, 0.842652, 0.801059, 0.506656, 1.46148, 0.544847, 0, -0.993771, -0.139066, 1.29714, 1.94426, 0.873356, -0.441202, 1.00473, -1.6696, 0.377889, 1.32649, 0.254016, 0, -1.03022, 0.112539, 0.944926, 0.778765, 0.293572, -0.433204, 0.964929, 1.65588, -0.0189417, 0.999093, 0.454305, 0, -1.05754, -0.138152, 0.259726, 0.0609476, 0.573594, 0.863095, 0.148812, 2.25696, 0.725451, -0.567867, 0.497329, -0.188547, 0.490712, -0.169359, -0.90918, 0.37124, -0.120062, 0.376953, 1.66893, -1.56893, -0.424249, 1.61422, -0.395118, 0, -1.65753, -0.440468, -0.0197556, -0.731748, 0.46812, -0.15554, 0.895538, -0.841583, -0.0439249, 1.00228, 0.19704, 0, -0.907883, -0.128691, 0.452222, 0.79472, 0.417748, 0.614894, -1.34219, 0.88567, -0.0576202, 1.40061, 0.623726, 0, 1.47521, -0.119419, 0.404441, 0.339829, -0.281595, 0.191771, 1.7897, 1.80348, 1.08947, -1.42379, 0.323983, -0.301875, 1.43278, 1.12033, 0.10539, 1.2422, -0.0253131, 0.987143, 0.446882, 2.215, -0.211848, -0.442886, 0.966317, -0.185541, 1.06267, -0.0647772, 0.203284, 0.633417, 0.544748, -0.91726, -0.771627, -1.75902, -0.780548, -0.914696, 0.536284, -0.421174, -0.90968, 0.235565, -0.922234, 1.09429, 0.552283, -0.426437, 1.20492, -2.13547, 0.18332, -1.27259, -0.534414, -0.198591, 1.26494, 0.370615, -0.448628, 0.782695, -0.941353, 0.0147667, -0.938388, 1.63129, -0.4317, 1.17333, 0.451528, 0, 0.833321, 0.62452, -0.826127, -0.787139, 0.21783, -0.542702, 1.5444, 0.914788, 0.307505, 1.54385, 0.499135, 0, -1.60784, 0.22174, 0.304697, -2.11593, 0.821132, 0.374911, 0.746004, 1.67948, -0.357492, 1.10345, -0.161055, 0, -0.754506, -0.114807, 0.888188, -1.67994, -1.59164, -0.255908, -0.0402953, -0.332597, -0.255192, 1.59197, -0.0303713, 0, 0.0446001, -0.0236, -1.6118, -2.37238, -0.360115, 0.388142, 1.90552, -2.33311, 0.064899, 1.93924, -0.382745, 0, -1.94357, -0.00716273, -0.365847, -0.282849, -0.0407084, -0.572907, -1.5436, -1.28767, -1.46064, -0.700064, 0.298349, -0.212061, -0.759897, 1.37632, -0.490782, 1.86914, -0.370054, 0.337468, 1.03384, 1.79506, 0.506135, 1.02002, -0.15179, 0, -0.962568, 0.406606, -0.477268, 0.424055, -0.64487, 0.757325, -0.265536, 2.095, -0.499838, -0.645525, -0.627189, -0.104123, -0.627863, -0.263939, 0.772031, -1.11413, -1.53057, 0.587901, 0.33361, -0.167805, 0.650496, 1.50555, 0.331268, 0, -0.183789, 0.43273, -1.60578, 1.79587, 0.913856, 0.0494189, 0.668642, 0.0256739, -0.27187, 1.06056, 0.29319, 0, -0.612871, -0.396776, 0.866957, 0.351525, -1.44809, -0.292836, -0.469825, -0.890177, -0.249004, 1.51959, -0.179665, 0, 0.494455, -0.0923573, -1.46643, -2.07861, -0.63089, 0.319023, -1.17304, 1.4178, 0.186584, 1.33135, 0.261729, 0, 1.20124, -0.0392435, -0.656731, -1.90725, 0.224107, 0.522037, 0.934776, 1.31885, 0.111194, 0.938522, -0.550787, 0, -1.06488, 0.207864, 0.139214, -0.134304, -1.13186, -0.270639, -0.78253, -2.11258, -0.455526, 1.3103, 0.205711, 0, 0.691444, 0.420209, -1.14544, -0.27138, -1.64816, 1.08198, 0.21148, 0.774583, -0.749554, -0.820841, -1.64202, -0.000285405, -0.808435, -1.44477, 1.09128, -2.34097, 1.06682, -0.880381, -1.27882, -0.957123, 0.795207, 1.64249, -0.467364, 0, 1.33346, -0.275161, 1.30182, 0.368395, -0.420451, 0.6735, 1.62668, 1.60764, -0.253586, 1.63182, -0.741172, 0, -1.74224, -0.400049, -0.284685, 0.0669771, -0.857471, -1.47615, -0.640504, -1.78475, 0.21028, -0.82234, 1.61371, -0.487375, -1.59532, 0.685025, 0.556969, 0.873144, 1.08949, -0.422328, -0.330702, 1.37246, 0.373843, 1.13474, -0.217522, 0, 0.384664, 0.0933467, 1.14806, -0.581286, 0.890381, 0.111549, -0.533237, 1.07037, 0.31772, -0.936282, 0.334656, -0.440569, -0.442537, -0.447769, -0.832603, -1.74101, 1.06369, 0.0759479, 1.16362, 0.822281, -0.134578, 1.57249, 0.0203874, 0, -1.15831, -0.112955, 1.06621, -2.10976, -1.19676, -0.0303565, 0.208035, 0.138563, 0.162921, -0.893848, 0.8068, -0.269462, 0.13288, 0.822526, 0.884437, 2.20742, -0.802897, 0.306382, 1.79172, 1.84423, 0.460662, 1.92907, -0.123439, 0, -1.75838, 0.365482, -0.850457, -0.610436, 0.608245, 1.46055, -0.642978, 1.6178, -0.0560892, -0.668108, -1.5707, -0.46029, -1.59483, 0.58053, -0.189982, 1.21311, 0.247419, 0.470868, -1.66689, 1.37333, -0.178466, 1.68178, 0.448584, 0, 1.7229, 0.106586, 0.285842, -0.885709, -0.562614, 0.288061, -1.82637, 0.908055, 0.81129, -1.677, -0.51442, -0.01411, -1.66145, -0.916428, 0.367268, -2.28073, -0.841892, 0.0999475, -0.54645, 1.95662, -0.155294, 0.910291, 0.40575, 0, 0.533367, 0.4228, -0.744405, -1.44032, 1.23507, -0.161603, 0.527403, -1.69943, 0.234352, 1.3245, -0.142958, 0, -0.499349, 0.221905, 1.23737, -0.699317, 1.74479, -0.428487, 0.792093, 0.539869, 0.559985, 1.86874, -0.222612, 0, -0.705287, 0.42372, 1.78279, -0.514037, -1.98687, -0.0731377, -0.163845, 1.36047, -0.0140571, 1.87955, -0.668535, 0, 0.178877, -0.664671, -1.87245, 1.16286, 0.363188, 0.142221, -1.56731, -0.478187, 0.219519, 1.5882, 0.194986, 0, 1.55836, -0.256868, 0.337806, 1.21535, -0.720369, -0.530128, 1.64713, -1.14268, -0.606717, 1.74829, 0.297337, 0, -1.62049, -0.418903, -0.843539, -1.29246, 0.969916, 1.12626, 0.276585, 1.18663, 0.994475, -0.622219, -0.953702, -0.186314, -0.596631, 0.793775, -1.14002, 1.9527, 0.78497, -0.073658, 0.67648, -0.478109, -0.0367138, 1.02667, 0.15439, 0, -0.679487, -0.140565, 0.773154, 1.45503, 1.15123, 0.0322423, -0.496421, -0.8316, -0.0535007, 1.25224, -0.0427384, 0, 0.494582, 0.0604096, 1.15089, 0.0860077, -1.52943, 0.216372, 0.439768, -1.11777, 0.109443, 1.55545, -0.384678, 0, -0.47774, -0.336361, -1.496, 0.262949, -0.169032, -0.0394819, 1.37802, -2.00409, -0.607736, 1.24829, -0.0387817, 0, -1.2374, -0.607691, -0.169195, 0.512832, 1.41645, 0.130894, 0.750539, 0.0425885, 0.622221, -1.11306, -0.980169, -0.316344, 0.43964, 1.15358, -1.0309, 2.17655, 0.334958, -0.152478, -1.96027, 1.48603, 0.728183, 1.85673, -0.0199977, 0, 1.82638, -0.71232, 0.367486, -1.31801, 1.70712, 0.142708, 0.713276, 1.06916, -0.369308, 1.73766, 0.536222, 0, -0.62669, -0.635261, 1.62699, -1.84887, -1.48177, 0.10662, 0.144306, 0.431879, -0.173918, -0.558478, -1.3732, -0.36167, -0.0440973, -1.38006, 0.566851, -2.08174, -1.41675, 0.0998497, 0.00799803, -1.25054, 0.0988775, 1.37585, 0.338316, 0, 0.0160369, 0.338031, -1.37938, -1.84873, -1.01779, -0.0454896, -1.43857, -1.09111, 0.520205, 1.63118, -0.419624, 0, 1.342, -0.666805, -0.928374, -1.67327, -0.544565, -0.71639, -1.74521, 2.32845, 0.114765, 1.80052, -0.774905, 0, 1.88303, -0.316914, -0.457479, -0.469493, 0.357831, 1.50082, 1.02743, 2.01794, 1.66114, -0.696134, 0.438344, -0.278998, 0.740747, 0.836093, -1.47931, 0.853284, -0.967345, 0.251083, -0.585887, -0.458609, 0.323814, 1.11075, -0.0586271, 0, 0.549045, -0.21272, -0.997678, -1.53561, 0.876865, -0.150947, 1.19982, 2.35158, 0.443682, 1.41885, -0.145753, 0, -1.12494, 0.441942, 0.877743, -0.146491, 0.961204, 0.127611, 0.575248, -1.06545, -0.351877, 1.00718, 0.364537, 0, -0.472627, -0.490327, 0.898504, -1.80032, 0.347872, 1.31811, -1.10384, 2.04799, -0.739067, -0.902199, -1.31024, -0.224942, -1.55231, 0.724931, 0.376443, 0.917447, 1.68243, -0.153518, 0.524122, 1.16579, 0.1161, -1.5582, -0.829083, -0.218202, 0.533659, 0.822977, -1.47199, 1.92822, -0.0105972, 0.298068, -1.62401, 0.421826, 1.23638, -1.07496, -0.205364, -0.133798, -1.09435, -1.21736, -0.216292, -2.32283, 1.74777, -0.573449, 0.0428424, -0.507068, 0.555558, 1.71923, 0.347825, 0, -0.148437, -0.317465, 1.80626, -0.544664, 1.43003, 0.44638, -1.15557, -0.133095, 0.0283176, 1.75264, 0.712061, 0, 1.23847, -0.555498, 1.31803, -1.96587, -1.4624, -0.272688, -1.02484, 0.0458544, 0.984498, -0.998044, -1.13928, -0.136165, -0.394237, -1.48082, 0.956571, -2.33161, 1.77195, 0.495545, 0.530564, 1.41478, 0.626288, -1.75119, -0.45604, -0.207398, 0.367188, 0.59552, -1.78253, 1.80196, 0.376264, -0.0751277, 1.0986, -0.121221, -0.0825347, 1.15578, 0.107305, 0, -1.09807, -0.112615, 0.368381, -0.330551, 1.58469, -0.182529, 0.456278, -1.63483, 0.0174327, 1.56036, 0.563659, 0, -0.491124, -0.533572, 1.49226, 0.644323, 1.43367, -0.139032, -0.409049, 0.921196, 0.197449, 1.47184, 0.191776, 0, 0.384272, -0.23756, 1.42758, 2.27969, 1.14994, 0.403086, 0.2605, -0.533836, -0.404111, 1.17808, -0.0390221, 0, -0.258908, -0.0484702, 1.21792, 2.06459, 0.911676, 0.664959, -0.623547, 0.408716, 0.91157, -0.669575, 0.618744, -0.0664797, -0.00470951, -0.878426, -0.943652, -2.39754, -1.43665, 0.995915, 0.808213, 2.10124, -1.24996, -1.35918, -0.547047, -0.27506, 0.287501, -0.932638, 1.66029, -0.642224, 0.488401, 0.551821, -1.38922, 0.260045, 0.070883, 1.4513, 0.6014, 0, 1.49312, -0.249399, 0.425865, -2.30955, 0.835501, -0.262665, 1.02373, -0.700835, -0.0425544, 1.29556, 0.36714, 0, -1.05603, -0.260019, 0.79515, 1.25951, -0.195644, 0.495891, -1.87792, 2.14282, 0.325523, 1.8691, 0.459648, 0, 1.91482, -0.267084, -0.270015, 0.550784, -0.746151, -0.4592, 1.78521, 1.34519, -0.467189, 1.91014, 0.296068, 0, -1.78313, -0.308314, -0.824591, -0.54231, -0.606025, -0.320766, 1.46961, -2.00606, 0.201948, 1.5527, 0.42218, 0, -1.49059, 0.340777, -0.540297, 0.40789, 0.00898577, -0.0309138, 1.10936, -1.09847, -0.609192, -0.927447, -0.0209103, -0.335346, 0.927639, -0.608767, -0.024478, -1.85065, 0.123755, -0.294117, -1.34113, 0.59427, 0.294114, 1.32099, -0.26256, 0, 1.34113, -0.262556, 0.181336, -2.22538, -0.0535072, 0.538846, 1.54882, 0.189312, 0.667861, -1.40814, 0.512977, -0.0746438, 1.49771, 0.64717, -0.173414, 2.39375)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lphmw"]
shading_mode = 2
albedo_color = Color(0.247059, 0.607843, 0.0431373, 1)

[sub_resource type="BoxMesh" id="BoxMesh_uo8jq"]
material = SubResource("StandardMaterial3D_lphmw")
size = Vector3(0.01, 0.05, 0.005)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r61s3"]
albedo_color = Color(0.537011, 0.537011, 0.537011, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_uhekw"]
material = SubResource("StandardMaterial3D_r61s3")
top_radius = 0.3
bottom_radius = 0.75
height = 0.2
radial_segments = 10
rings = 2
cap_bottom = false

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_xgnx7"]

[sub_resource type="Sky" id="Sky_oq84l"]
sky_material = SubResource("ProceduralSkyMaterial_xgnx7")

[sub_resource type="Environment" id="Environment_p5bsr"]
background_mode = 2
sky = SubResource("Sky_oq84l")

[node name="MoleTurf" type="Node3D"]
process_mode = 1
script = ExtResource("1_dvcqh")
hit_timeframe = 0.05
perfect_timeframe = 0.02
max_note_delay = 0.1

[node name="Objects" type="Node3D" parent="."]

[node name="World" type="Node3D" parent="Objects"]

[node name="Floor" type="StaticBody3D" parent="Objects/World"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Objects/World/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
mesh = SubResource("CylinderMesh_qvlsy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Objects/World/Floor"]
shape = SubResource("WorldBoundaryShape3D_27lgm")

[node name="GrassBlades" type="MultiMeshInstance3D" parent="Objects/World/Floor"]
multimesh = SubResource("MultiMesh_jxrla")

[node name="GrassBlade" type="MeshInstance3D" parent="Objects/World/Floor"]
mesh = SubResource("BoxMesh_uo8jq")
skeleton = NodePath("../../../..")

[node name="SmallCircle" type="MeshInstance3D" parent="Objects/World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0526347, 0)
mesh = SubResource("CylinderMesh_uhekw")
skeleton = NodePath("../../..")

[node name="WorldEnvironment" type="WorldEnvironment" parent="Objects/World"]
environment = SubResource("Environment_p5bsr")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Objects/World"]
transform = Transform3D(1, 0, 0, 0, 0.732828, 0.680414, 0, -0.680414, 0.732828, 0, 3.95281, 4.36369)

[node name="MoleHoles" type="Node3D" parent="Objects"]

[node name="Hole1" parent="Objects/MoleHoles" instance=ExtResource("3_eqoqx")]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -0.52, 0, -0.65)

[node name="Hole2" parent="Objects/MoleHoles" instance=ExtResource("3_eqoqx")]
transform = Transform3D(0.97437, 0, 0.224951, 0, 1, 0, -0.224951, 0, 0.97437, -0.2, 0, -0.92)

[node name="Hole3" parent="Objects/MoleHoles" instance=ExtResource("3_eqoqx")]
transform = Transform3D(0.97437, 0, -0.224951, 0, 1, 0, 0.224951, 0, 0.97437, 0.2, 0, -0.92)

[node name="Hole4" parent="Objects/MoleHoles" instance=ExtResource("3_eqoqx")]
transform = Transform3D(0.707106, 0, -0.707106, 0, 1, 0, 0.707106, 0, 0.707106, 0.52, 0, -0.65)
